Stop horizontal overflow

--- a/_sass/foundation.scss
+++ b/_sass/foundation.scss
@@ -81,6 +81,7 @@ kbd {
 table:not(.rouge-table) {
 	border-collapse: collapse;
 	margin: 0 auto;
+	display: block; // so they scroll
 
 	$bstyle: 1px solid grey;
 
